# hermes-examples

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  LICENSE  README.md
cpp/: CMakeLists.txt  exportmodel.cpp  inversecompton.cpp
cpp/cmake/: FindHERMES.cmake
cpp/src/: freefree.cpp  inversecompton.cpp  piondecay.cpp  piondecaywithabsorption.cpp  rotationmeasure.cpp  synchrotron.cpp  synchrotronwithabsorption.cpp
jupyter/: e1-dm-ymw16.ipynb  e2-pizero-dragon2d.ipynb  e3-ic-dragon2d.ipynb  e4-gr-spectrum.ipynb  e5-neutrinos.ipynb  e6-darkmatter.ipynb
python/: README.md  dm-ymw16-skymap.py  e1-dispersionmeasure-ymw16.py  e1-dm-ymw16.py  e1-pi0-gammaray-skymaps.py  e2-pi0-gammaray-ring.py  e2-rotationmeasure-ne2001-jf12.py  e2-rotationmeasure-ymw16-jf12.py  e3-ic-dragon2d.py  e3-pi0-neutrino-skymaps.py  e4-bremss-gammaray-skymaps.py  e4-gammaray-spectra.py  e5-IC-gammaray-skymaps.py  e5-gammaray-skymaps.py  e6-DarkMatter-skymaps.py  e6-synchro-skymaps.py  e7-gas-columndensity.py  e7-synchro-spectra.py  e8-pi0-gammaray-spectrum.py  e9-pi0-gammaray-masked-spectrum.py  ic-dragon2d-skymap.py  pizero-dragon2d-skymap.py  plot_gamma_maps.py  utils.py
src/: exportmodel.cpp  freefree.cpp  generic.cpp  inversecompton.cpp  piondecay.cpp  rotationmeasure.cpp  synchrotron.cpp  synchrotronwithabsorption.cpp
